# ai_gen_novel

./: README.md  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  writing_agent.py
llm/: __init__.py  llm_config.py
models/: __init__.py  chapter.py  chapter_plot.py  database.py  outline.py
prompts/: __init__.py  outline_prompt.py  plot_prompt.py  writer_prompt.py
tools/: __init__.py  chapter_writer.py  outline_generator.py  plot_planner.py
